[gd_scene load_steps=50 format=3 uid="uid://bocig7usld53w"]

[ext_resource type="PackedScene" uid="uid://cvatelahibnjl" path="res://player/player.tscn" id="1_l1rk1"]
[ext_resource type="Script" uid="uid://bp2gijcc1enr5" path="res://game_screens/game/game.gd" id="1_txhlf"]
[ext_resource type="Script" uid="uid://dfkq4o22ymhr1" path="res://game_screens/game/grind_path.gd" id="1_vasa2"]
[ext_resource type="PackedScene" uid="uid://bcwfm3mw5710y" path="res://game_screens/end/end.tscn" id="2_cxkev"]
[ext_resource type="PackedScene" uid="uid://cu13ab2ed83x3" path="res://funds/coin_spawner.tscn" id="3_4xgoh"]
[ext_resource type="Resource" uid="uid://bfc16jmccsrdj" path="res://funds/resources/current_funds.tres" id="4_0ydko"]
[ext_resource type="PackedScene" uid="uid://8mgl1i6nimrx" path="res://models/GLB format/floor-wood.glb" id="4_26nvy"]
[ext_resource type="Script" uid="uid://crx6mk28wv1s2" path="res://game_screens/game/path_visual.gd" id="4_ryayy"]
[ext_resource type="Resource" uid="uid://cgo4b4r5v3vk7" path="res://score_manager/point_values/trick_points.tres" id="4_slubn"]
[ext_resource type="PackedScene" uid="uid://dhsr7gf5g8nb" path="res://debug/node_disabler.tscn" id="6_ddh2v"]
[ext_resource type="PackedScene" uid="uid://bo77hwc35sjxe" path="res://score_manager/score_manager.tscn" id="7_slubn"]
[ext_resource type="PackedScene" uid="uid://4d6flvbws1q4" path="res://ui/store/store_ui.tscn" id="9_8usfm"]
[ext_resource type="Script" uid="uid://2mnbi61m6kla" path="res://ui/game_ui.gd" id="9_kw303"]
[ext_resource type="PackedScene" uid="uid://dmutl6118avhm" path="res://debug/debug_console_manager.tscn" id="9_r5hjm"]
[ext_resource type="FontFile" uid="uid://ca45dnpmcfk5l" path="res://ui/Fonts/Teko-Medium.ttf" id="9_yjec7"]
[ext_resource type="PackedScene" uid="uid://d0ltewo8asuxs" path="res://funds/funds_manager.tscn" id="10_yw4jq"]
[ext_resource type="Resource" uid="uid://0f7ppn4ikm4k" path="res://score_manager/score_values/current_score.tres" id="13_om5sn"]
[ext_resource type="PackedScene" uid="uid://c1f6nlxrlajff" path="res://ui/info_message.tscn" id="15_fuw7p"]
[ext_resource type="Resource" uid="uid://cu5xew64i5jj6" path="res://score_manager/stat_values/SpeedStat.tres" id="15_om5sn"]
[ext_resource type="AudioStream" uid="uid://mi2fo0ecxf45" path="res://music/Musinova - Pool Party (House Funk Disco).mp3.mp3" id="16_lbdsk"]
[ext_resource type="Resource" uid="uid://ctv06h38dk23e" path="res://score_manager/stat_values/GrindStat.tres" id="16_r5hjm"]
[ext_resource type="AudioStream" uid="uid://car3l1yv1pi2u" path="res://music/Ketsa - My Town.mp3" id="17_0g76f"]
[ext_resource type="PackedScene" uid="uid://bokkdl1gl3a1l" path="res://ui/tutorial/tutorial.tscn" id="17_pn7ch"]
[ext_resource type="AudioStream" uid="uid://bhx4bvq3rke14" path="res://music/Musinova - Playful Glitch IDM Electronic.mp3.mp3" id="18_26nvy"]
[ext_resource type="AudioStream" uid="uid://cas8gff8iex2a" path="res://music/Musinova - Technology Electronic Ambient IDM.mp3.mp3" id="19_isy70"]
[ext_resource type="Resource" uid="uid://dxlo00b2ovwg2" path="res://score_manager/point_values/trick_multiplier.tres" id="19_mr3ea"]
[ext_resource type="Texture2D" uid="uid://cd1omkmggytm8" path="res://ui/store/icons/exit.png" id="19_yw4jq"]
[ext_resource type="PackedScene" uid="uid://dwxnsuwrxi8nr" path="res://models/GLB format/half-pipe.glb" id="21_8c02a"]
[ext_resource type="Script" uid="uid://cksf1f26q3j4m" path="res://music/music.gd" id="21_8kja6"]
[ext_resource type="PackedScene" uid="uid://bbsb3ir5uvg8l" path="res://models/GLB format/rail-high.glb" id="22_igy8q"]
[ext_resource type="PackedScene" uid="uid://bferqw4rdjn7g" path="res://models/GLB format/rail-low.glb" id="23_8nrn3"]
[ext_resource type="PackedScene" uid="uid://cblcve3y4oao1" path="res://models/GLB format/skateboard.glb" id="23_igy8q"]
[ext_resource type="PackedScene" uid="uid://dt4lnwe0ktmvo" path="res://models/city_kit/tree-large.glb" id="24_e7cbi"]
[ext_resource type="PackedScene" uid="uid://dgx6om1unxvg6" path="res://models/city_kit/tree-small.glb" id="24_fkswu"]
[ext_resource type="PackedScene" uid="uid://dpff0wyvhoatr" path="res://models/city_kit/planter.glb" id="24_mng32"]
[ext_resource type="PackedScene" uid="uid://rpmgfmslh26h" path="res://models/GLB format/obstacle-box.glb" id="25_5kt8s"]
[ext_resource type="PackedScene" uid="uid://bmgmsm3onir1d" path="res://models/city_kit/fence.glb" id="27_hg21n"]
[ext_resource type="PackedScene" uid="uid://c8eyjs15r7prg" path="res://models/GLB format/pallet.glb" id="29_3bl5q"]
[ext_resource type="Script" uid="uid://crh007qfx87nq" path="res://game_screens/game/ui_fixer.gd" id="32_epgd6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vasa2"]
sky_top_color = Color(0.996078, 0.921569, 0.964706, 1)
sky_horizon_color = Color(1.22686, 1.20048, 1.20226, 1)
ground_horizon_color = Color(1.22686, 1.20048, 1.20226, 1)

[sub_resource type="Sky" id="Sky_h7iqs"]
sky_material = SubResource("ProceduralSkyMaterial_vasa2")

[sub_resource type="Environment" id="Environment_4fuuu"]
background_mode = 1
background_color = Color(0.407843, 0.498039, 0.898039, 1)
sky = SubResource("Sky_h7iqs")
tonemap_mode = 2

[sub_resource type="Curve3D" id="Curve3D_l1rk1"]
closed = true
bake_interval = 0.01
_data = {
"points": PackedVector3Array(-0.966596, 0, 0.792071, 0.966596, 0, -0.792071, -2.43603, 5.53131e-05, -2.81723, -1.36629, 0, -1.31279, 1.36629, 0, 1.31279, 2.35973, 5.53131e-05, -2.92177, 1.921, 0, -1.66842, -1.921, 0, 1.66842, 2.61175, 5.53131e-05, 2.23054, 1.11802, 0, 1.78165, -1.11802, 0, -1.78165, -2.89501, 5.53131e-05, 1.80769),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="LabelSettings" id="LabelSettings_mr3ea"]
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_om5sn"]
bg_color = Color(0.472284, 0.561961, 0.923557, 1)
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5hjm"]
bg_color = Color(0.407843, 0.498039, 0.898039, 1)
corner_radius_top_left = 10

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_2brpg"]
shuffle = true
stream_count = 4
stream_0 = ExtResource("16_lbdsk")
stream_1 = ExtResource("17_0g76f")
stream_2 = ExtResource("18_26nvy")
stream_3 = ExtResource("19_isy70")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_26nvy"]
albedo_color = Color(0.674815, 0.674815, 0.674815, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_igy8q"]
albedo_color = Color(0.67451, 0.67451, 0.67451, 1)

[node name="Game" type="Node3D" node_paths=PackedStringArray("player")]
script = ExtResource("1_txhlf")
lose_screen = ExtResource("2_cxkev")
player = NodePath("GrindPath/PathFollow3D/Player")
current_funds = ExtResource("4_0ydko")

[node name="floor-wood2" parent="." instance=ExtResource("4_26nvy")]
transform = Transform3D(20, 0, 0, 0, 2, 0, 0, 0, 20, 0, 0.153154, 0)

[node name="CoinSpawner" parent="." node_paths=PackedStringArray("path") instance=ExtResource("3_4xgoh")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
path = NodePath("../GrindPath")
current_funds = ExtResource("4_0ydko")

[node name="NodeDisabler" parent="CoinSpawner" instance=ExtResource("6_ddh2v")]
process_mode = 3
disabled = true

[node name="Managers" type="Node" parent="."]

[node name="ScoreManager" parent="Managers" node_paths=PackedStringArray("game_ui") instance=ExtResource("7_slubn")]
trick_points = ExtResource("4_slubn")
current_funds = ExtResource("4_0ydko")
game_ui = NodePath("../../GameUI")

[node name="FundsManager" parent="Managers" instance=ExtResource("10_yw4jq")]

[node name="DebugConsoleManager" parent="Managers" instance=ExtResource("9_r5hjm")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 0.3
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4fuuu")

[node name="Camera3D" type="Camera3D" parent="." groups=["camera"]]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 75.59, 75)
current = true
fov = 4.0
size = 11.476

[node name="GrindPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.833929, 0)
curve = SubResource("Curve3D_l1rk1")
script = ExtResource("1_vasa2")
speed = 4.0

[node name="PathFollow3D" type="PathFollow3D" parent="GrindPath"]
transform = Transform3D(0.633819, 0, -0.773475, 0, 1, 0, 0.773475, 0, 0.633819, -2.37265, 0.100055, -2.73988)
h_offset = 0.1
v_offset = 0.1
tilt_enabled = false

[node name="Player" parent="GrindPath/PathFollow3D" node_paths=PackedStringArray("score_manager") instance=ExtResource("1_l1rk1")]
transform = Transform3D(-0.985145, 0, -0.171723, 0, 1, 0, 0.171723, 0, -0.985145, 0.0585818, 0, 0.12579)
score_manager = NodePath("../../../Managers/ScoreManager")

[node name="PathVisual" type="CSGPolygon3D" parent="GrindPath" node_paths=PackedStringArray("path")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.825, 0)
polygon = PackedVector2Array(0, 0, 0, 0.1, 0.1, 0.1, 0.1, 0)
mode = 2
path_node = NodePath("")
path_interval_type = 0
path_interval = 0.66
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
script = ExtResource("4_ryayy")
path = NodePath("..")

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_kw303")
current_funds = ExtResource("4_0ydko")
current_score = ExtResource("13_om5sn")
info_msg_scene = ExtResource("15_fuw7p")
debug_enabled = true
speed_stat = ExtResource("15_om5sn")
grind_stat = ExtResource("16_r5hjm")
trick_points = ExtResource("4_slubn")
trick_multiplier_debug = ExtResource("19_mr3ea")
metadata/_edit_use_anchors_ = true

[node name="ComboLabel" type="RichTextLabel" parent="GameUI"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 74.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/normal_font = ExtResource("9_yjec7")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="FundsLabel" type="Label" parent="GameUI"]
layout_mode = 1
offset_right = 91.0
offset_bottom = 144.0
theme_override_fonts/font = ExtResource("9_yjec7")
theme_override_font_sizes/font_size = 65
text = "$0"
horizontal_alignment = 2

[node name="ScoreLabel" type="Label" parent="GameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_right = 45.5
offset_bottom = 144.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("9_yjec7")
theme_override_font_sizes/font_size = 65
text = "0"
horizontal_alignment = 1

[node name="MsgStartPoint" type="Control" parent="GameUI"]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 104.0
offset_right = 50.0
offset_bottom = 144.0

[node name="DebugData" type="Label" parent="GameUI"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -300.0
offset_right = 510.0
grow_vertical = 0
text = "asdfasdf"
label_settings = SubResource("LabelSettings_mr3ea")

[node name="StoreUI" parent="." node_paths=PackedStringArray("score_manager") instance=ExtResource("9_8usfm")]
score_manager = NodePath("../Managers/ScoreManager")

[node name="BailOutButton" type="Button" parent="StoreUI"]
z_index = 285
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Bail out! (end run)"
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_om5sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_r5hjm")
icon = ExtResource("19_yw4jq")
icon_alignment = 1
expand_icon = true

[node name="Tutorial" parent="." instance=ExtResource("17_pn7ch")]
debug_disabled = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_2brpg")
volume_db = -10.4
script = ExtResource("21_8kja6")

[node name="StartTimer" type="Timer" parent="Music"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PrettyThings" type="Node3D" parent="."]

[node name="rail-high2" parent="PrettyThings" instance=ExtResource("22_igy8q")]
transform = Transform3D(2.80492, 0, 1.06415, 0, 3, 0, -1.06415, 0, 2.80492, -4.71092, -0.355205, 2.21061)
visible = false

[node name="rail-high3" parent="PrettyThings" instance=ExtResource("22_igy8q")]
transform = Transform3D(2.74384, 0, -1.21298, 0, 3, 0, 1.21298, 0, 2.74384, -4.65975, -0.355205, -1.7211)

[node name="rail-high4" parent="PrettyThings" instance=ExtResource("22_igy8q")]
transform = Transform3D(1.17051, 0, -2.76223, 0, 3, 0, 2.76223, 0, 1.17051, -2.00494, -0.355205, -4.51374)

[node name="rail-high5" parent="PrettyThings" instance=ExtResource("22_igy8q")]
transform = Transform3D(-1.13343, 0, -2.77765, 0, 3, 0, 2.77765, 0, -1.13343, 1.97846, -0.525625, -4.57822)

[node name="rail-high6" parent="PrettyThings" instance=ExtResource("22_igy8q")]
transform = Transform3D(-2.77539, 0, -1.13895, 0, 3, 0, 1.13895, 0, -2.77539, 4.64846, -0.525625, -1.83247)

[node name="FloorBig" type="CSGCylinder3D" parent="PrettyThings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.728876, 0)
material_override = SubResource("StandardMaterial3D_26nvy")
radius = 5.065
smooth_faces = false

[node name="rail-low2" parent="PrettyThings" instance=ExtResource("23_8nrn3")]
transform = Transform3D(0.604507, 0, -1.90646, 0, 2, 0, 1.90646, 0, 0.604507, -5.54201, 0.216594, 2.70879)

[node name="skateboard2" parent="PrettyThings" instance=ExtResource("23_igy8q")]
transform = Transform3D(-0.73831, 0.309725, -0.599141, -0.123295, -0.935334, -0.331585, -0.663096, -0.170941, 0.728754, -3.76029, 0.370204, 3.36315)

[node name="skateboard3" parent="PrettyThings" instance=ExtResource("23_igy8q")]
transform = Transform3D(-0.539647, -0.185431, 0.821216, -0.0729985, -0.961463, -0.265068, 0.838721, -0.202991, 0.505314, 5.56596, 0.642997, 3.90221)

[node name="tree-large2" parent="PrettyThings" instance=ExtResource("24_e7cbi")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0.778226, 0.502814, -0.011781)
visible = false

[node name="obstacle-box2" parent="PrettyThings" instance=ExtResource("25_5kt8s")]
transform = Transform3D(2.63237, 0, -1.43897, 0, 3, 0, 1.43897, 0, 2.63237, -5.32633, 1.29016, -5.20187)

[node name="planter2" parent="PrettyThings" instance=ExtResource("24_mng32")]
transform = Transform3D(2.86055, 0, 0.904015, 0, 3, 0, -0.904015, 0, 2.86055, -8.39198, 0.475798, 3.38188)
visible = false

[node name="FloorSmall1" type="CSGBox3D" parent="PrettyThings"]
transform = Transform3D(0.955098, 0, 0.296292, 0, 1, 0, -0.296292, 0, 0.955098, -5.3932, -0.255935, 2.50526)
material_override = SubResource("StandardMaterial3D_igy8q")
size = Vector3(3.34277, 1, 1.77002)

[node name="FloorSmall3" type="CSGBox3D" parent="PrettyThings"]
transform = Transform3D(0.474995, 0, 0.879989, 0, 1, 0, -0.879989, 0, 0.474995, -5.77821, 0.623015, -4.07038)
material_override = SubResource("StandardMaterial3D_igy8q")
size = Vector3(5.23889, 1, 2.94604)

[node name="FloorSmall2" type="CSGBox3D" parent="PrettyThings"]
transform = Transform3D(0.944342, 0, -0.328965, 0, 1, 0, 0.328965, 0, 0.944342, 5.48111, -0.255935, 2.18932)
material_override = SubResource("StandardMaterial3D_igy8q")
size = Vector3(3.65869, 1, 2.81458)

[node name="FloorSmall4" type="CSGBox3D" parent="PrettyThings"]
transform = Transform3D(0.421495, 0, -0.906831, 0, 1, 0, 0.906831, 0, 0.421495, 5.71187, -0.255935, -4.00827)
material_override = SubResource("StandardMaterial3D_igy8q")
size = Vector3(3.65869, 1, 3.3235)

[node name="fence2" parent="PrettyThings" instance=ExtResource("27_hg21n")]
transform = Transform3D(2.8771, 0, 0.849887, 0, 3, 0, -0.849887, 0, 2.8771, -5.39843, 0.374648, 1.44894)

[node name="fence3" parent="PrettyThings" instance=ExtResource("27_hg21n")]
transform = Transform3D(2.8771, 0, 0.849887, 0, 3, 0, -0.849887, 0, 2.8771, -6.85052, 0.374648, 1.92675)

[node name="tree_cluster" type="Node3D" parent="PrettyThings"]

[node name="tree-small3" parent="PrettyThings/tree_cluster" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.29694, 0.500804, 0.926565)

[node name="tree-small4" parent="PrettyThings/tree_cluster" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.91419, 0.500804, 0.926565)

[node name="tree-small5" parent="PrettyThings/tree_cluster" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.56172, 0.523732, 1.19788)

[node name="tree-small6" parent="PrettyThings/tree_cluster" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -6.05748, 0.523732, 1.36604)

[node name="tree-small7" parent="PrettyThings/tree_cluster" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -6.3037, 0.47807, 1.47128)

[node name="tree_cluster2" type="Node3D" parent="PrettyThings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6384, -0.0778635, -0.663371)

[node name="tree-small3" parent="PrettyThings/tree_cluster2" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.29694, 0.500804, 1.71051)

[node name="tree-small4" parent="PrettyThings/tree_cluster2" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.91419, 0.500804, 0.926565)

[node name="tree-small5" parent="PrettyThings/tree_cluster2" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.61615, 0.523732, 1.19788)

[node name="tree-small6" parent="PrettyThings/tree_cluster2" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -6.05748, 0.523732, 1.31902)

[node name="tree-small7" parent="PrettyThings/tree_cluster2" instance=ExtResource("24_fkswu")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.84565, 0.47807, 1.57597)

[node name="pallet_cluster" type="Node3D" parent="PrettyThings"]

[node name="pallet2" parent="PrettyThings/pallet_cluster" instance=ExtResource("29_3bl5q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6383, 0.222095, 3.45793)

[node name="pallet3" parent="PrettyThings/pallet_cluster" instance=ExtResource("29_3bl5q")]
transform = Transform3D(0.916719, 0.155975, 0.367829, 0, 0.920648, -0.390394, -0.399533, 0.357881, 0.843975, 4.07114, 0.238572, 3.45888)

[node name="pallet4" parent="PrettyThings/pallet_cluster" instance=ExtResource("29_3bl5q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.89275, 0.248016, 2.95057)

[node name="obstacle-box3" parent="PrettyThings" instance=ExtResource("25_5kt8s")]
transform = Transform3D(2.74725, -0.00599359, 1.20522, 0.00654498, 2.99999, 0, -1.20522, 0.00262938, 2.74726, 5.69436, 0.484115, -3.95058)

[node name="half-pipe2" parent="PrettyThings" instance=ExtResource("21_8c02a")]
transform = Transform3D(-1.00141, 0, -0.93082, 0, 1, 0, 2.55045, 0, -0.365478, 6.5545, 0.432955, 2.74064)

[node name="UIFixer" type="Node" parent="."]
script = ExtResource("32_epgd6")

[connection signal="pressed" from="StoreUI/BailOutButton" to="." method="_on_bail_out_button_pressed"]
[connection signal="timeout" from="Music/StartTimer" to="Music" method="_on_start_timer_timeout"]
